--- a/style.css
+++ b/style.css
@@ -21,4 +21,11 @@ body{
 text-align: center;
 text-decoration: none;
 color: var(--white);
+font-size: 1.7rem;
+}
+.navbar{
+    display: flex;
+    justify-content: space-around;
+    gap: 20px;
+    
 }
