--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@ body{
     font-family: futurak;
     src: url(assets/fonts/Futurak/futurak.ttf);
 }
+@font-face {
+    font-family: butler;
+    src: url(assets/fonts/butler/Butler/Butler_Regular.otf);
+}
 .nav-items > a{
 text-decoration: none;
 color: var(--white);
@@ -118,9 +122,36 @@ font-weight: 300;
 .brands-btn{
     background-color: transparent;
     color: var(--white);
-    border: 1px solid var(--light-grey);
-    padding: 15px 40px;
-    border-radius: 20px;
-    font-size: 1.5rem;
+    border:1px solid rgba(255, 255, 255, 0.3);
+    padding: 20px 45px;
+    border-radius: 50px;
+    font-size: 1.7rem;
+    margin: auto;
+    margin-top: 24px;
 }
 /* <!-- Welocme to Salt n Pepper ended --> */
+
+/* <!-- Restaurant Franchises started --> */
+.restaurant-franchises{
+    margin: 60px;
+}
+.restaurant-franchises > h2{
+    font-size: 3.3rem;
+text-align: center;
+font-weight: 300;
+font-family: butler;
+}
+.restaurant-franchises > p{
+    font-family: appercu;
+     padding: 20px 0px;
+    font-size: 1.7rem;
+    color: var(--light-grey);
+    text-align: center;
+}
+.restaurant-franchises-container{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+}
+/* <!-- Restaurant Franchises ended --> 
