--- a/style.css
+++ b/style.css
@@ -133,6 +133,7 @@ font-weight: 300;
     font-size: 1.7rem;
     margin: auto;
     margin-top: 24px;
+    cursor: pointer;
 }
 /* <!-- Welocme to Salt n Pepper ended --> */
 
@@ -192,16 +193,18 @@ margin-bottom: 10px;
 }
 .restauran-franchises-btn{
     background-color: transparent;
-    border: 1px solid var(--white);
+    border: 1px solid rgba(255, 255, 255, 0.3);;
     color: var(--white);
     padding: 20px 25px;
     border-radius: 50px;
     width: 174px;
     height: 50px;
     font-family: poppins;
+    cursor: pointer;
     
     
 }
+
 .franchise-btn-icon{
     background-color: var(--white);
     color: var(--red);
@@ -209,15 +212,75 @@ margin-bottom: 10px;
     padding: 3px;
     
 }
-.express-franchises{
-    background-color: var(--background-color);
-    display: flex;
-    align-items: center;
-
-}
-.express-franchises > h2{
-    font-size: 2rem;
-}
 
 
 /* <!-- Restaurant Franchises ended --> 
+
+
+/* express franchises started */
+.express-franchises{
+    background-color: var(--background-color);
+
+}
+.express-franchises > h2{
+    font-size: 5rem;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.express-franchises-container{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+    gap: 30px;
+    text-align: center;
+    padding: 20px 15px;
+}
+.express-franchises > img{
+    height: 250px;
+    width: 100%;
+}
+.small-text-2{
+    text-transform: uppercase;
+    font-size: 1.2rem;
+    color: var(--red);
+    letter-spacing: 0.50em;
+    font-family: appercu;
+    font-weight: lighter;
+    margin: 8px 0px;
+    
+}
+.head-3{
+    font-family: futurak;
+    font-size: 2.4rem;
+    padding: 20px 4px;
+
+}
+.express-franchises-childeren > p{
+    color: var(--light-grey);
+    padding: 15px;
+}
+.exp-franchise-btn{
+    background-color: transparent;
+    color: var(--white);
+    border: 1px solid rgba(255, 255, 255, 0.3);;
+    width: 174px;
+    height: 50px;
+    font-family: poppins;
+    font-size: 1.3rem;
+    font-weight: 100px;
+    padding: 10px 0px;
+    border-radius: 50px;
+    cursor: pointer;
+}
+.exp-btn-icon{
+      background-color: var(--white);
+    color:var(--red);
+    width: 27px;
+    height: 27px;
+    padding: 6px 8px;
+    border-radius: 25px;
+    margin-left: 10px;
+}
+/* express franchises ended */
