--- a/style.css
+++ b/style.css
@@ -390,11 +390,13 @@ margin-left: 20px ;
    /* location card started */
    .location-cards{
     padding: 50px 20px;
-    text-align: center;
+    /* text-align: center; */
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 30px;
+    margin-top: 50px; 
+    flex-direction: row;
    }
    .location-cards > h2{
     font-size: 2.4rem;
@@ -409,11 +411,10 @@ margin-left: 20px ;
     color: var(--black);
     text-align: center;
     height: 230px;
-    padding: 20px;
-    margin-bottom: 32px;
-    margin: auto;
+    padding:25px 20px;
+    
     border-radius: 4px;
-    width: 260px;
+    width: 270px;
 
    }
    .location-card > small{
