--- a/about-us.css
+++ b/about-us.css
@@ -93,11 +93,18 @@ nav{
 /* navbar ended */
 
 /* Introduction Started */
+.intro-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+   padding: 50px 50px;
+}
 .intro > h2{
     font-size: 4rem;
     text-align: center;
     padding: 25px 30px;
     font-family: inter;
+  
   
 }
 .intro > p{
@@ -105,6 +112,7 @@ nav{
     color: var(--grey);
     font-family: appercu;
     font-weight: 300;
+    text-align: center;
 }
 .first-img > h2{
 font-size: 3rem;
@@ -133,7 +141,7 @@ font-family: inter;
     display: flex;
     justify-content: space-around;
     gap: 20px;
-    /* padding: 20px 25px; */
+    padding:  50px;
   
 }
 .intro-first-1{
@@ -153,6 +161,7 @@ font-family: inter;
     font-size: 3rem;
     font-weight: 300;
     font-family: inter;
+    text-align: center;
 }
 .text-container > p{
      font-size: 1.5rem;
@@ -160,12 +169,15 @@ font-family: inter;
     font-family: appercu;
     font-weight: 300;
     padding-bottom: 20px;
+    text-align: center;
 }
 .image-container{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    padding: 20px 20px;
+ 
 }
 .heading-1{
     font-size: 32px;
@@ -335,8 +347,8 @@ display: flex;
 align-items: center;
 justify-content: space-between;
 gap: 40px;
-flex-direction: row;
-flex-wrap: wrap;
+ flex-direction: row;
+ flex-wrap: wrap; 
 }
 .main-text-1 > p{
 color: var(--light-grey);
@@ -372,21 +384,31 @@ margin-left: 20px;
     margin: 8px 0px;
 margin-left: 20px ;
 }
+.village-franchise > h4{
+    font-size: 3rem;
+    font-family: inter;
+    text-align: center;
+    padding: 20px 25px;
+}
    /* <!-- Village Franchise ended --> */
+  
+
+
     /* footer started */
    
 footer {
-  background-color: #111;
-  color: #f0f0f0;
-  padding: 50px 20px;
+  background-color: var(--background-color);
+  color:var(--white);
+  padding: 50px 25px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  font-family: Arial, sans-serif;
+  font-family: inter;
+  
 }
 
 
-.footer,
+
 .site-links,
 .contact-us {
   flex: 1 1 300px;
