--- a/style.css
+++ b/style.css
@@ -504,7 +504,7 @@ footer {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  font-family: Arial, sans-serif;
+  font-family: appercu;
 }
 
 
