--- a/style.css
+++ b/style.css
@@ -392,11 +392,12 @@ margin-left: 20px ;
     padding: 50px 20px;
     text-align: center;
     display: flex;
+    flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
     gap: 30px;
-    margin-top: 50px; 
-    flex-direction: row;
+    margin-top: 50px;
+    align-items: center;
    }
    .location-cards > h2{
     font-size: 2.4rem;
@@ -467,5 +468,6 @@ margin-bottom: 10px;
     flex-wrap: wrap;
     justify-content: center;
     gap: 30px;
+    align-items: center;
 }
    /* location card ended */
