--- a/style.css
+++ b/style.css
@@ -402,6 +402,7 @@ margin-left: 20px ;
 .location-cards h1 {
   font-size: 36px;
   margin-bottom: 10px;
+  text-align: center;
 }
 
 .font-futurak-1 {
