--- a/about-us.css
+++ b/about-us.css
@@ -75,7 +75,9 @@ nav{
     border: 1px solid var(--white);
     color: var(--white);
     border-radius: 30px;
-    padding: 10px 15px;
+    padding: 15px 15px;
+    cursor: pointer;
+    font-size: 1.6rem;
 }
 .order-btn{
     background-color: var(--red);
