--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ nav{
     font-size: 1.6rem;
     cursor: pointer;
 }
+
 .nav-items{
     display: flex;
     align-items: center;
@@ -75,7 +76,9 @@ nav{
     border: 1px solid var(--white);
     color: var(--white);
     border-radius: 30px;
-    padding: 10px 15px;
+    padding: 15px 15px;
+    cursor: pointer;
+    font-size: 1.6rem;
 }
 .order-btn{
     background-color: var(--red);
@@ -404,13 +407,26 @@ margin-left: 20px ;
 .location-cards h1 {
   font-size: 36px;
   margin-bottom: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  flex-wrap: wrap;
 }
 
 .font-futurak-1 {
   font-family: futurak; 
   font-weight: bold;
+  text-align: center;
 }
-
+.txt-align{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  flex-wrap:wrap ;
+  
+}
 
 .location-cards h2 {
   font-size: 22px;
